--- a/tucans-plantmatica/styles/Home.module.css
+++ b/tucans-plantmatica/styles/Home.module.css
@@ -1,116 +1,418 @@
-.container {
-  padding: 0 2rem;
+/* vietnamese */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY9z_wNahGAdqQ43Rh_ebrnlwyYfEPxPoGUgGs5q4fYGyA.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+/* latin-ext */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY9z_wNahGAdqQ43Rh_ebrnlwyYfEPxPoGUgGs5qofYGyA.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY9z_wNahGAdqQ43Rh_ebrnlwyYfEPxPoGUgGs5pIfY.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* vietnamese */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY_z_wNahGAdqQ43RhVcIgYT2Xz5u32KxfXBiAJpp_c.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+
+/* latin-ext */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY_z_wNahGAdqQ43RhVcIgYT2Xz5u32KxfXBiEJpp_c.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/worksans/v11/QGY_z_wNahGAdqQ43RhVcIgYT2Xz5u32KxfXBi8Jpg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* .HEAD_0 es el Header del INDEX, mientras que el .HEAD será el general */
+
+.head_0 {
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.9) 0%, rgba(25, 110, 25, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 100%;
+  height: 120px;
+  display: inline-block;
+  text-align: center;
   align-items: center;
+  box-shadow: 0px 0px 7px rgb(50, 50, 50);
+  text-shadow: 0px 0px 3px rgb(65, 65, 65);
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
+
+.head {
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  position: sticky;
+  height: max-content;
   align-items: center;
-}
-
-.footer a {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  justify-content: space-between;
+  box-shadow: 0px 0px 7px rgb(50, 50, 50);
+  text-shadow: 0px 0px 3px rgb(65, 65, 65);
 }
 
-.title a {
-  color: #0070f3;
+.head a {
   text-decoration: none;
+  color: rgb(240, 240, 240);
+  transition: ease-in-out;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.head a:hover {
+  text-decoration: none;
+  color: white;
+  text-shadow: 0px 0px 3px rgb(255, 255, 255);
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.div_head1 {
+  width: 33vw;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
-.title,
-.description {
+.div_head2 {
+  width: 33vw;
+  text-align: right;
+  font-size: 1.5vw;
+  margin-left: 10%;
+}
+
+.b_head {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.logo_1_w {
+  
+  padding-top: 1.25%;
+  
+  width: 17.5%;
+}
+
+.container_0 {
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  height:100%;
+  display: inline-flexbox;
+}
+
+.container_1 {
+  width: 90%;
+  margin: auto;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.container_2 {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  justify-content: space-between;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+.container_2 table {
+  width: 100%;
+  text-align: center;
+}
+
+.container_3 {
+  width: 85%;
+  text-align: center;
+}
+
+.container_4 {
+  width: 80%;
+  min-width: 350px;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.container_4 table{
+  text-align: center;
+}
+
+.fullContainer{
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height:100%;
+  display:flex;
+  justify-content: space-between;
+}
+
+.appContainer{
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height:100vh;
+  display: inline-block;
+  transition: 0.3s;
+  
+}
+
+.head_Page{
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 70px;
+  padding: 5px;
+  padding-left: 10px;
+  transition: 0.6s ease-out; 
+}
+
+.head_Page h3{
+  transition: 0.3s ;
+}
+
+.head_Page :hover{
+  text-shadow: 0px 0px 4px rgb(255,255,255);
+}
+
+.finalC{
+  height:vh;
+  border: 1px solid #000000;
+  transition: 0.3s;
+}
+
+.Page{
+  background-image: linear-gradient(to top, rgba(210, 223, 209, 0.85) 0%, rgba(210, 223, 209, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 85%;
+  height: 80vh;
+  margin-top:10vh;
+  margin-left:7.5%;
+  transition: 0.3s;
+  border: 1px solid #000000;
+}
+
+.btnClose{
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  padding: 1%;
+  position: fixed;
+  overflow: hidden;
+}
+
+.btnSubmit {
+  margin: 16px;
+  margin-top: 15.8vh;
+  border-radius: 4px;
+  width:20vw;
+  min-width: max-content;
+  height: 75px;
+  font-size: 18px;
+  color: white;
+  background-color: var(--main-color);
+  border: 0;
+  transition: 0.3s;
+
+}
+
+.btnSubmit:hover {
+  cursor: pointer;
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: scale(1.1, 1.1);
+
+}
+
+.aside_0 {
+  width: 20%;
+  border: 1px solid #000000;
+  text-align: center;
+}
+
+/*Contenido*/
+
+.cont_img {
+  width: fit-content;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  box-shadow: 0px 0px 10px rgb(50, 50, 50);
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.index_img {
+  border-radius: 10px;
+  padding-left: 10px;
+  transition: 0.3s;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+/*Lateral*/
+
+.t_plantmatica{
+  color: rgb(238,238,238);
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+
+
+.lateral{
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20vw;
+  min-width: 260px;
+  height: 100vh;
+  text-align:center;
+  transition: 0.25s;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.lateral_logo{
+  padding-top:30px;
+  
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.pages{
+  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+
+  margin-top: 1.5vh;
+  border-radius: 5px;
+  width:10vw;
+  min-width: max-content;
+  height:10vh;
+  font-size: 18px;
+  color: white;
+  
+  border: 0;
+  transition: 0.3s ;
+}
+
+.pages:hover {
+  background-image: linear-gradient(to top, rgba(80, 175, 80, 0.8) 0%rgba(80, 175, 80, 0.8) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  text-shadow:0px 0px 5px rgb(255,255,255);
+  width: 100%;
+  cursor: pointer;
+  background-color: var(--hover-color);
+  border-radius: 0px;
+
+}
+
+/*Footer*/
+
+.footy {
+  background-image: linear-gradient(to top, rgba(46, 33, 23, 0.8) 0%, rgba(48, 31, 18, 0.8) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 32px;
+  position:relative;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0px 0px 7px rgb(50, 50, 50);
+  text-shadow: 0px 0px 3.5px rgb(65, 65, 65);
+}
+
+.footy text {
+  color: rgb(100, 100, 100)
+}
+
+.footy_t {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: auto;
+  width: 97.5%;
+  text-align: center;
+}
+
+.footy_t_1 {
+  width: 50%;
+  text-align: left;
+}
+
+.footy_t_2 {
+  width: 50%;
+  text-align: right;
+}
+
+.footy a {
+  text-decoration: none;
+  color: rgb(250, 250, 250);
+  transition: 0.2s ease-in-out;
+}
+
+.footy a:hover {
+  text-decoration: none;
+  color: white;
+  text-shadow: 0px 0px 4px rgb(255, 255, 255);
+}
+
+.git_logo {
+  width: 7%;
 }
