--- a/tucans-plantmatica/styles/globals.css
+++ b/tucans-plantmatica/styles/globals.css
@@ -1,9 +1,25 @@
-html,
-body {
+html, body {
+  /* Variables globales (Formulario) - adrian */
+  --text-color: rgb(14, 123, 67);
+  --main-color: #0E7B43;
+  --hover-color: rgb(34, 119, 85);
+  --hover-secondary-color: rgba(53, 114, 102, 0.2);
+  --danger-color: rgb(216, 24, 24);
+  --bg-color-lg: #e6fada;
+  --save-color: rgb(98, 98, 236);
+  --purple-color: rgb(145, 25, 161);
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+button{
+  cursor: pointer;
 }
 
 a {
