--- a/tucans-plantmatica/styles/Home.module.css
+++ b/tucans-plantmatica/styles/Home.module.css
@@ -234,6 +234,20 @@
   transition: 0.3s;
 }
 
+/* Nombres */
+
+.nombres{
+  transition: 0.2s ease-in-out;
+}
+
+.nombres:hover{
+
+  text-shadow: 0px 0px 3px rgb(25,25,25);
+
+}
+
+
+
 .Page{
   background-image: linear-gradient(to top, rgba(210, 223, 209, 0.85) 0%, rgba(210, 223, 209, 0.85) 100%), url(../src/head_bg.jpg);
   background-size: cover;
