--- a/tucans-plantmatica/styles/Home.module.css
+++ b/tucans-plantmatica/styles/Home.module.css
@@ -237,12 +237,13 @@
 /* Nombres */
 
 .nombres{
-  transition: 0.15s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
   .nombres:hover{
     color: white;
     padding: 5px;
+    margin: 2px;
     background-color: rgb(60, 60, 60);
     border-radius: 5px;
     text-shadow: 0px 0px 2px rgb(250,250,250);
