--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -1,22 +1,13 @@
-.head{
-    background-image: linear-gradient(to top, rgba(66, 167, 66, 0.9) 0%, rgba(25, 110, 25, 0.9) 100%), url(../src/head_bg.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
+
 .head {
-    background-image: linear-gradient(to top, rgba(66, 167, 66, 0.9) 0%, rgba(25, 110, 25, 0.9) 100%), url(../src/head_bg.jpg);
+    background-image: linear-gradient(to top, rgba(99, 164, 63, 0.9) 0%, rgba(90, 149, 57, 0.85) 100%), url(../src/head_bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
     width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,7 +31,7 @@
 .botonera {
     margin-top: 15px;
 }
-
+/*
 .menuButton {
     background-image: linear-gradient(to top, rgba(66, 167, 66, 0.9) 0%, rgba(25, 110, 25, 0.9) 100%), url(../src/head_bg.jpg);
     background-size: cover;
@@ -50,7 +41,9 @@
     border-radius: 4px;
     width: 12vw;
     min-width: max-content;
+*/
     /* height: 85px; */
+/*
     padding: 10px;
     font-size: 16px;
     color: white;
@@ -58,7 +51,9 @@
     transition: 0.3s;
     
 }
+*/
 
+/*
 .menuButton:hover {
     background-image: linear-gradient(to top, rgba(80, 175, 80, 0.8) 0%rgba(80, 175, 80, 0.8) 100%), url(../src/head_bg.jpg);
     background-size: cover;
@@ -68,4 +63,79 @@
     margin-left: 20px;
     cursor: pointer;
     background-color: var(--hover-color);
+}
+*/
+
+/*Dropdown*/
+
+/* Dropdown (Botón) */
+.dropbtn {
+    background-image: linear-gradient(to top, rgba(102, 168, 66, 0.9) 0%, rgba(102, 165, 65, 0.85) 100%), url(../src/head_bg.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    padding: 16px;
+    margin-top: 20px;
+    font-size: 16px;
+    width: 150px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    
+}
+  
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdownContent {
+        display: block;
+    }
+
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {
+        background-image: linear-gradient(to top, rgba(137, 206, 100, 0.9) 0%, rgba(137, 206, 100, 0.9) 100%), url(../src/head_bg.jpg);
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        text-shadow: 0px 0px 3px rgb(250, 250, 250);
+    }
+
+  /* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdownContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdownContent a:hover {
+    background-color: #f1f1f1
+}
+
+
+
+/* Logo */
+
+.logo1{
+
+    margin-top: 18px;
+
 }
