--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     position: relative;
     width: 100%;
-    height: 80px;
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,6 +70,7 @@
 
 /* Dropdown (Botón) */
 .dropbtn {
+
     background-image: linear-gradient(to top, rgba(102, 168, 66, 0.9) 0%, rgba(102, 165, 65, 0.85) 100%), url(../src/head_bg.jpg);
     background-size: cover;
     background-attachment: fixed;
@@ -86,12 +87,12 @@
     
 }
   
-    /* Show the dropdown menu on hover */
+    /* Mostrar el contenido del dropdown */
     .dropdown:hover .dropdownContent {
         display: block;
     }
 
-    /* Change the background color of the dropdown button when the dropdown content is shown */
+    /* Cambiar el color del botón principal */
     .dropdown:hover .dropbtn {
         background-image: linear-gradient(to top, rgba(137, 206, 100, 0.9) 0%, rgba(137, 206, 100, 0.9) 100%), url(../src/head_bg.jpg);
         background-size: cover;
@@ -99,15 +100,16 @@
         background-position: center;
         background-repeat: no-repeat;
         text-shadow: 0px 0px 3px rgb(250, 250, 250);
+        
     }
 
-  /* The container <div> - needed to position the dropdown content */
+  /* Posicionar el <div> */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
+/* Dropdown (Contenido) */
 .dropdownContent {
     display: none;
     position: absolute;
@@ -115,9 +117,10 @@
     min-width: 150px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    transform: translate(-18px,0);
 }
 
-/* Links inside the dropdown */
+/* Links del dropdown */
 .dropdownContent a {
     color: black;
     padding: 12px 16px;
@@ -125,9 +128,10 @@
     display: block;
 }
 
-/* Change color of dropdown links on hover */
+/* Cambiar el color de los links dropdown con hover */
 .dropdownContent a:hover {
-    background-color: #f1f1f1
+    background-color: #f1f1f1;
+    
 }
 
 
