--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -30,6 +30,8 @@
 
 .botonera {
     margin-top: 15px;
+    display: inline-flexbox;
+    justify-content: space-between;
 }
 /*
 .menuButton {
@@ -80,7 +82,7 @@
     padding: 16px;
     margin-top: 20px;
     font-size: 16px;
-    width: 150px;
+    width: 130px;
     height: 50px;
     border: none;
     cursor: pointer;
@@ -114,7 +116,7 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 150px;
+    min-width: 130px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     transform: translate(-18px,0);
