--- a/tucans-plantmatica/styles/Fichas.module.css
+++ b/tucans-plantmatica/styles/Fichas.module.css
@@ -205,7 +205,7 @@
 
 .txtEtiquetas {
     margin-top: 5px;
-    background-color: #f0f0f0;
+    background-color: #e4e4e4;
     border: none;
     width: 50%;
     height: 26px;
@@ -232,7 +232,7 @@
 
 .txtNombres {
     margin-top: 5px;
-    background-color: #f0f0f0;
+    background-color: #e3e3e3;
     border: none;
     width: 30%;
     min-width: max-content;
@@ -260,7 +260,7 @@
 
 .txtBody {
     margin-top: 5px;
-    background-color: #f0f0f0;
+    background-color: #e3e3e3;
     border: none;
     width: 100%;
     height: 150px;
@@ -287,7 +287,7 @@
 
 .txtRef {
     margin-top: 5px;
-    background-color: #f0f0f0;
+    background-color: #e3e3e3;
     border: none;
     width: 75%;
     height: 60px;
@@ -364,4 +364,14 @@
     background-color: var(--naranja-color);
     transform: scale(1.05, 1.05);
     color: white;
+}
+
+.btnEnviar{
+    transform: translate(15px, -7.5px);
+    width: 64px;
+    height: 25.5px;
+    background: linear-gradient(to right, var(--hover-color), var(--rightColor));
+    background-attachment: fixed;
+    border: none;
+    border-radius: 5px;
 }
