Deployate ya hijodelaberga

--- a/tucans-plantmatica/styles/Fichas.module.css
+++ b/tucans-plantmatica/styles/Fichas.module.css
@@ -10,7 +10,7 @@
       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
 }
 
-.material-icons{
+.materialIcons{
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
