--- a/tucans-plantmatica/styles/Home.module.css
+++ b/tucans-plantmatica/styles/Home.module.css
@@ -79,7 +79,6 @@
   text-align: center;
   align-items: center;
   box-shadow: 0px 0px 5px rgb(50, 50, 50);
-  text-shadow: 0px 0px 3px rgb(65, 65, 65);
 }
 
 
@@ -96,7 +95,6 @@
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 0px 5px rgb(50, 50, 50);
-  text-shadow: 0px 0px 3px rgb(65, 65, 65);
 }
 
 .head a {
@@ -140,7 +138,7 @@
 }
 
 .container_0 {
-  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -184,7 +182,7 @@
 }
 
 .fullContainer{
-  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -196,7 +194,7 @@
 }
 
 .appContainer{
-  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%), url(../src/head_bg.jpg);
+  
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -279,26 +277,27 @@
   margin: 16px;
   margin-top: 5vh;
   border-radius: 4px;
-  width:20vw;
+  width: 15vw;
   min-width: max-content;
   height: 75px;
   font-size: 18px;
-  color: white;
-  background-color: var(--main-color);
-  border: 0;
+  color: var(--main-color);
+  background-color: white;
+  border: 2px solid var(--main-color);
   transition: 0.3s;
 
 }
 
 .btnSubmit:hover {
   cursor: pointer;
-  background-image: linear-gradient(to top, rgba(65, 180, 65, 0.8) 0%, rgba(15, 100, 15, 0.825) 100%), url(../src/head_bg.jpg);
+  background-color: var(--main-color);
+  color: white;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   transform: scale(1.1, 1.1);
-
+  border: 0;
 }
 
 .aside_0 {
