--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -42,7 +42,7 @@
 
 .dropbtn {
 
-    background-image: linear-gradient(to top, rgba(102, 168, 66, 0.9) 0%, rgba(102, 165, 65, 0.85) 100%), url(../src/head_bg.jpg);
+    background:none;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -146,7 +146,3 @@
     transition: 0.3s;
 
 }
-
-    .head:hover .logo1{
-        transform: translate(10px, 0px);
-    }
