--- a/tucans-plantmatica/styles/Fichas.module.css
+++ b/tucans-plantmatica/styles/Fichas.module.css
@@ -66,15 +66,16 @@
     border-radius: 4px;
     transition: 0.3s;
     color: white;
-    background: linear-gradient(to right, var(--hover-color), var(--rightColor));
+    background: linear-gradient(to right,  var(--rightColor), purple);
     background-attachment: fixed;
+    
 }
 
 .etiquetas:hover {
-    transform: scale(1.05, 1.05);
-    background-color: var(--hover-color);
-
-    color: white;
+    
+    text-shadow: 0px 0px 4px rgb(250,250,250);
+    
+    
 }
 
 .btnLinkFicha {
