--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -8,6 +8,18 @@
     
 }
 
+
+/* container principal */
+
+.container{
+    padding-top: 1vh;
+    padding-left: 4vw;
+    padding-right: 4vw;
+    transition: 0.3s ease-in-out;
+}
+
+/* botonera */
+
 .btnMenu{
     border-top: 0;
     border-left: 0;
@@ -37,11 +49,17 @@
         
     }
 
-/* container principal */
-
-.container{
-    padding-top: 1vh;
-    padding-left: 4vw;
-    padding-right: 4vw;
-    transition: 0.3s ease-in-out;
+.btnSign{
+    border:1px solid var(--main-color);
+    color:var(--main-color);
+    background-color: white;
+    padding:10px;
+    border-radius: 5px;
+    transition: 0.2s;
 }
+    
+    .btnSign:hover{
+        transform: scale(1.05, 1.05);
+        background-color: var(--main-color);
+        color: white;
+    }
