pinche perro napoles desesperado el hijodelaverga, cabron, ya esta el perro commit a ver si tanta mucha prisa, ojete

--- a/tucans-plantmatica/styles/Admin.module.css
+++ b/tucans-plantmatica/styles/Admin.module.css
@@ -3,6 +3,22 @@
     grid-template-columns: 30% 70%;
 }
 
+.minicard{
+    background-color: var(--save-color);
+    color: white;
+    border-radius: 4px;
+    padding: 5px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+
+.promo_icon{
+    font-size: 64px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
 
 .nombreC {
     color: var(--text-color);
