--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -16,8 +16,60 @@
     padding-left: 4vw;
     padding-right: 4vw;
     transition: 0.3s ease-in-out;
-    margin-bottom: 100px;
+    margin-bottom: 75px;
 }
+
+/* Registrar Sucursales */
+
+.registrarSucursales{
+    display: inline-block;
+    width: 80%;
+    
+    padding: 2vh;
+    border-radius: 10px;
+    background-color: rgba(150, 150, 150, 0.3);
+    text-align: center;
+    transition: 0.3s;
+}
+
+/*Elementos del Form de registro*/
+
+
+    .input{
+        width: 40%;
+        height: auto;
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-top: 50px;
+        margin-bottom:none;
+        transition: 0.3s;
+        border: 0;
+        font-size: 18px;
+        background-color: rgba(150, 150, 150, 0.0);
+        outline: none;
+        border-bottom: 3px solid var(--main-color);
+        border-radius: 4px 4px 0 0;
+    }
+
+    .input:hover{
+        background-color: rgba(150, 150, 150, 0.2);
+    }
+
+    .input:focus{
+        background-color: rgba(255,255,255,0.5); 
+    
+    }
+
+.placeholder{
+    transform: translate(-18px,0);
+}
+
+@media screen and (max-width: 600px) {
+    .input, .placeholder {
+      width: 80%;
+      margin-top: 25px;
+    }
+  }
 
 /* botonera */
 /*
@@ -77,7 +129,10 @@
     border: 2px solid var(--main-color);
     color: var(--main-color);
     background-color: white;
+    width: 20vw;
+    min-width: max-content;
     padding: 10px;
+    margin-top: 30px;
     border-radius: 5px;
     transition: 0.2s;
 }
