--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -31,7 +31,7 @@
 .botonera {
     
     margin-top: 15px;
-    width: fit-content;
+    width: max-content;
     display: inline-flexbox;
     justify-content: space-between;
 }
@@ -145,4 +145,18 @@
     margin-top: 18px;
     transition: 0.3s;
 
+}
+
+/* Para cel jjj */
+
+@media screen and (max-width: 600px) {
+    .botonera{
+        transform: scale(0.5,0.5);
+        transform: translate(-75px, 0);
+        height:90px;
+        width: 600px;
+    }
+    .head{
+        height:75px;
+    }
 }
