--- a/tucans-plantmatica/styles/Home.module.css
+++ b/tucans-plantmatica/styles/Home.module.css
@@ -365,7 +365,7 @@
 }
 
 .pages:hover {
-  background-image: linear-gradient(to top, rgba(80, 175, 80, 0.8) 0%rgba(80, 175, 80, 0.8) 100%), url(../src/head_bg.jpg);
+  background-image: linear-gradient(to top, rgba(80, 175, 80, 0.8) 0%, rgba(80, 175, 80, 0.8) 100%), url(../src/head_bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -450,4 +450,10 @@
 .link:hover{
   color: var(--text-color);
   transform: scale(1.05, 1.05);
+}
+
+@media screen and (max-width: 600px) {
+  .p_info{
+    transform: scale(0.7,0.7);
+  }
 }
