--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -22,26 +22,37 @@
 /* Registrar Sucursales */
 
 .registrarSucursales{
-    display: inline-block;
+    display: inline-flexbox;
     width: 80%;
     
-    padding: 2vh;
+    padding: 2.5vh;
     border-radius: 10px;
     background-color: rgba(150, 150, 150, 0.3);
     text-align: center;
     transition: 0.3s;
 }
 
+/* Sucursales */
+
+.sucursales{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+/*
+.cardSucursal{
+
+}
+*/
 /*Elementos del Form de registro*/
 
 
     .input{
-        width: 40%;
+        width: 80%;
         height: auto;
         margin-left: 5px;
         margin-right: 5px;
         margin-top: 50px;
-        margin-bottom:none;
+        margin-bottom:25px;
         transition: 0.3s;
         border: 0;
         font-size: 18px;
@@ -60,12 +71,67 @@
     
     }
 
+    .mini_input{
+        width: 75%;
+        height: auto;
+
+        margin-top: 10px;
+        margin-bottom:10px;
+        transition: 0.3s;
+        border: 0;
+        font-size: 16px;
+        background-color: rgba(150, 150, 150, 0.0);
+        outline: none;
+        border-bottom: 3px solid var(--main-color);
+        border-radius: 4px 4px 0 0;
+    }
+
+    .mini_input:hover{
+        background-color: rgba(150, 150, 150, 0.2);
+    }
+
+    .mini_input:focus{
+        background-color: rgba(255,255,255,0.5); 
+    }
+
+
+.checkContainer{
+    width: 95%;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: inline-flex;
+    transition: 0.3s;
+}
+
+    .select{
+        border:2px solid var(--main-color);
+        width: 65%;
+        height: 20%;
+        margin: 10px;
+        color: var(--text-color);
+
+    }
+
+    .select:focus{
+        border:2px solid var(--main-color);
+    }
+
+    .select:active{
+        border:2px solid var(--main-color);
+    }
+
+
 @media screen and (max-width: 600px) {
     .input, .placeholder {
       width: 80%;
       margin-top: 25px;
     }
+
+    .checkContainer{
+        display: inline-block;
+    }
 }
+
 
 /* botonera */
 /*
@@ -122,7 +188,7 @@
     
 
 .btnSign {
-    border: 2px solid var(--main-color);
+    border: none;
     color: var(--main-color);
     background-color: white;
     width: 20vw;
@@ -131,6 +197,7 @@
     margin-top: 30px;
     border-radius: 5px;
     transition: 0.2s;
+    
 }
 
 .btnSign:hover {
@@ -140,7 +207,7 @@
 }
 
 
-.cuestion {
+.question {
     color: var(--text-color);
     font-size: 26px;
 }
